--- a/adaptive-card-notification/teamsapp.yml
+++ b/adaptive-card-notification/teamsapp.yml
@@ -8,12 +8,13 @@ provision:
       name: adaptive-card-notifi-${{TEAMSFX_ENV}} # Teams app name
     writeToEnvironmentFile: # Write the information of created resources into environment file for the specified environment variable(s).
       teamsAppId: TEAMS_APP_ID
+      
   - uses: botAadApp/create # Creates a new AAD app for Bot Registration.
     with:
-      name: adaptive-card-notifi
-    # Output: following environment variable will be persisted in current environment's .env file.
-    # BOT_ID: the AAD app client id created for Bot Registration.
-    # SECRET_BOT_PASSWORD: the AAD app client secret created for Bot Registration.
+      name: adaptive-card-notifi-${{TEAMSFX_ENV}} # The Azure Active Directory application's display name
+    writeToEnvironmentFile:
+      botId: BOT_ID # The Azure Active Directory application's client id created for bot.
+      botPassword: SECRET_BOT_PASSWORD # The Azure Active Directory application's client secret created for bot.
 
   - uses: arm/deploy # Deploy given ARM templates parallelly.
     with:
