--- a/command-bot-with-sso/teamsapp.local.yml
+++ b/command-bot-with-sso/teamsapp.local.yml
@@ -19,12 +19,12 @@ provision:
     # Output: the following environment variable(s) will be persisted in the current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
-  - uses: botAadApp/create # Creates a new AAD app for bot if BOT_ID environment variable is empty
+  - uses: botAadApp/create # Creates a new or reuses an existing Azure Active Directory application for bot.
     with:
-      name: sso-command-bot
-    # Output: the following environment variable(s) will be persisted in the current environment's .env file.
-    # BOT_ID: the AAD app client id created for bot
-    # SECRET_BOT_PASSWORD: the AAD app client secret created for bot
+      name: sso-command-bot-${{TEAMSFX_ENV}} # The Azure Active Directory application's display name
+    writeToEnvironmentFile:
+      botId: BOT_ID # The Azure Active Directory application's client id created for bot.
+      botPassword: SECRET_BOT_PASSWORD # The Azure Active Directory application's client secret created for bot.
 
   - uses: botFramework/create # Create or update the bot registration on dev.botframework.com
     with:
