--- a/share-now/teamsapp.yml
+++ b/share-now/teamsapp.yml
@@ -21,12 +21,12 @@ provision:
     # Output: the following environment variable(s) will be persisted in the current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
-  - uses: botAadApp/create # Creates a new AAD app for Bot Registration.
+  - uses: botAadApp/create # Creates a new or reuses an existing Azure Active Directory application for bot.
     with:
-      name: share-now-bot
-    # Output: the following environment variable(s) will be persisted in the current environment's .env file.
-    # BOT_ID: the AAD app client id created for Bot Registration.
-    # SECRET_BOT_PASSWORD: the AAD app client secret created for Bot Registration.
+      name: share-now-${{TEAMSFX_ENV}} # The Azure Active Directory application's display name
+    writeToEnvironmentFile:
+      botId: BOT_ID # The Azure Active Directory application's client id created for bot.
+      botPassword: SECRET_BOT_PASSWORD # The Azure Active Directory application's client secret created for bot.
 
   - uses: arm/deploy # Deploy given ARM templates parallelly.
     with:
