--- a/team-central-dashboard/teamsapp.local.yml
+++ b/team-central-dashboard/teamsapp.local.yml
@@ -62,10 +62,10 @@ deploy:
       devCert:
         trust: true
       dotnet: true
-    # Output: following environment variable will be persisted in current environment's .env file.
-    # SSL_CRT_FILE: certificate file
-    # SSL_KEY_FILE: certificate key
-    # DOTNET_PATH: the path of the .NET binary
+    writeToEnvironmentFile: # Write the information of installed dependencies into environment file for the specified environment variable(s).
+      sslCertFile: SSL_CRT_FILE
+      sslKeyFile: SSL_KEY_FILE
+      dotnetPath: DOTNET_PATH
 
   - uses: cli/runNpmCommand # Run npm command
     with:
