--- a/share-now/teamsapp.local.yml
+++ b/share-now/teamsapp.local.yml
@@ -74,9 +74,11 @@ deploy:
         trust: true
       func: true
       dotnet: true
-    # Output: following environment variable will be persisted in current environment's .env file.
-    # SSL_CRT_FILE: certificate file
-    # SSL_KEY_FILE: certificate key
+    writeToEnvironmentFile: # Write the information of installed dependencies into environment file for the specified environment variable(s).
+      sslCertFile: SSL_CRT_FILE
+      sslKeyFile: SSL_KEY_FILE
+      funcPath: FUNC_PATH
+      dotnetPath: DOTNET_PATH
 
   - uses: cli/runNpmCommand # Run npm command
     with:
