--- a/todo-list-with-Azure-backend/teamsapp.yml
+++ b/todo-list-with-Azure-backend/teamsapp.yml
@@ -94,6 +94,8 @@ deploy:
   - uses: prerequisite/install # Install dependencies
     with:
       dotnet: true
+    writeToEnvironmentFile: # Write the information of installed dependencies into environment file for the specified environment variable(s).
+      dotnetPath: DOTNET_PATH
 
   - uses: cli/runDotnetCommand
     with:
