--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -10,6 +10,7 @@
 # This should make it easy to add new rules without breaking existing ones.
 
 /NPM-search-connector-M365 @kimizhu @swatDong @kuojianlu
+/NPM-search-message-extension-codespaces @kimizhu @dooriya @qinezh
 /adaptive-card-notification @kimizhu @dooriya @swatDong @XiaofuHuang
 /bot-sso @eriolchan @yukun-dong
 /command-bot-with-sso @adashen @SLdragon
