--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -21,7 +21,7 @@
 /hello-world-bot-with-tab @eriolchan @hund030
 /hello-world-in-meeting @eriolchan @JerryYangKai
 /hello-world-tab-with-backend @eriolchan @hund030
-/hello-world-teams-tab-and-outlook-add-in @MSFT-yiz @1yefuwang1
+/hello-world-teams-tab-and-outlook-add-in @MSFT-yiz @1yefuwang1 @HuihuiWu-Microsoft
 /incoming-webhook-notification @kimizhu @dooriya @swatDong @XiaofuHuang
 /query-org-user-with-message-extension-sso @adashen @wenytang-ms
 /share-now @adashen @xzf0587
