--- a/hello-world-teams-tab-and-outlook-add-in/appPackage/manifest.json
+++ b/hello-world-teams-tab-and-outlook-add-in/appPackage/manifest.json
@@ -134,15 +134,15 @@
                                     "icons": [
                                         {
                                             "size": 16,
-                                            "url": "https://localhost:53000/assets/icon-16.png"
+                                            "file": "https://localhost:53000/assets/icon-16.png"
                                         },
                                         {
                                             "size": 32,
-                                            "url": "https://localhost:53000/assets/icon-32.png"
+                                            "file": "https://localhost:53000/assets/icon-32.png"
                                         },
                                         {
                                             "size": 80,
-                                            "url": "https://localhost:53000/assets/icon-80.png"
+                                            "file": "https://localhost:53000/assets/icon-80.png"
                                         }
                                     ],
                                     "controls": [
@@ -153,15 +153,15 @@
                                             "icons": [
                                                 {
                                                     "size": 16,
-                                                    "url": "https://localhost:53000/assets/icon-16.png"
+                                                    "file": "https://localhost:53000/assets/icon-16.png"
                                                 },
                                                 {
                                                     "size": 32,
-                                                    "url": "https://localhost:53000/assets/icon-32.png"
+                                                    "file": "https://localhost:53000/assets/icon-32.png"
                                                 },
                                                 {
                                                     "size": 80,
-                                                    "url": "https://localhost:53000/assets/icon-80.png"
+                                                    "file": "https://localhost:53000/assets/icon-80.png"
                                                 }
                                             ],
                                             "supertip": {
@@ -177,15 +177,15 @@
                                             "icons": [
                                                 {
                                                     "size": 16,
-                                                    "url": "https://localhost:53000/assets/icon-16.png"
+                                                    "file": "https://localhost:53000/assets/icon-16.png"
                                                 },
                                                 {
                                                     "size": 32,
-                                                    "url": "https://localhost:53000/assets/icon-32.png"
+                                                    "file": "https://localhost:53000/assets/icon-32.png"
                                                 },
                                                 {
                                                     "size": 80,
-                                                    "url": "https://localhost:53000/assets/icon-80.png"
+                                                    "file": "https://localhost:53000/assets/icon-80.png"
                                                 }
                                             ],
                                             "supertip": {
