--- a/bot-sso/package.json
+++ b/bot-sso/package.json
@@ -30,7 +30,8 @@
     "botbuilder-dialogs": "^4.18.0",
     "isomorphic-fetch": "^3.0.0",
     "restify": "^10.0.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "serialize-javascript": "^6.0.1"
   },
   "devDependencies": {
     "@types/restify": "8.5.5",
