--- a/todo-list-with-Azure-backend-M365/teamsapp.local.yml
+++ b/todo-list-with-Azure-backend-M365/teamsapp.local.yml
@@ -56,9 +56,9 @@ provision:
   - uses: m365Title/acquire # Upload your app to Outlook and the Microsoft 365 app
     with:
       appPackagePath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to the built app package.
-    # Output: following environment variable will be persisted in current environment's .env file.
-    # M365_TITLE_ID: the id of M365 title
-    # M365_APP_ID: the app id of M365 title
+    writeToEnvironmentFile: # Write the information of created resources into environment file for the specified environment variable(s).
+      titleId: M365_TITLE_ID
+      appId: M365_APP_ID
 
 deploy:
   - uses: prerequisite/install # Install dependencies
@@ -67,10 +67,11 @@ deploy:
         trust: true
       func: true
       dotnet: true
-    # Output: following environment variable will be persisted in current environment's .env file.
-    # SSL_CRT_FILE: certificate file
-    # SSL_KEY_FILE: certificate key
-    # DOTNET_PATH: the path of the .NET binary
+    writeToEnvironmentFile: # Write the information of installed dependencies into environment file for the specified environment variable(s).
+      sslCertFile: SSL_CRT_FILE
+      sslKeyFile: SSL_KEY_FILE
+      funcPath: FUNC_PATH
+      dotnetPath: DOTNET_PATH
 
   - uses: cli/runNpmCommand # Run npm command
     with:
