--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -20,6 +20,7 @@
 /graph-toolkit-productivity-hub-aspnetcore @adashen @SLdragon
 /hello-world-bot-with-tab @eriolchan @hund030
 /hello-world-in-meeting @eriolchan @JerryYangKai
+/hello-world-tab-codespaces @kimizhu @dooriya @qinezh
 /hello-world-tab-with-backend @eriolchan @hund030
 /hello-world-teams-tab-and-outlook-add-in @MSFT-yiz @1yefuwang1 @HuihuiWu-Microsoft
 /incoming-webhook-notification @kimizhu @dooriya @swatDong @XiaofuHuang
