--- a/hello-world-tab-with-backend/teamsapp.local.yml
+++ b/hello-world-tab-with-backend/teamsapp.local.yml
@@ -25,19 +25,19 @@ provision:
   - uses: script # Set TAB_DOMAIN for local launch
     name: Set TAB_DOMAIN for local launch
     with:
-      run: echo "::set-output TAB_DOMAIN=localhost:53000"
+      run: echo "set-teamsfx-env TAB_DOMAIN=localhost:53000"
   - uses: script # Set TAB_ENDPOINT for local launch
     name: Set TAB_ENDPOINT for local launch
     with:
-      run: echo "::set-output TAB_ENDPOINT=https://localhost:53000"
+      run: echo "set-teamsfx-env TAB_ENDPOINT=https://localhost:53000"
   - uses: script # Set FUNC_NAME for local launch
     name: Set FUNC_NAME for local launch
     with:
-      run: echo "::set-output FUNC_NAME=getUserProfile"
+      run: echo "set-teamsfx-env FUNC_NAME=getUserProfile"
   - uses: script # Set FUNC_ENDPOINT for local launch
     name: Set FUNC_ENDPOINT for local launch
     with:
-      run: echo "::set-output FUNC_ENDPOINT=http://localhost:7071"
+      run: echo "set-teamsfx-env FUNC_ENDPOINT=http://localhost:7071"
 
   - uses: aadApp/update # Apply the AAD manifest to an existing AAD app. Will use the object id in manifest file to determine which AAD app to update.
     with:
