--- a/team-central-dashboard/teamsapp.local.yml
+++ b/team-central-dashboard/teamsapp.local.yml
@@ -22,19 +22,19 @@ provision:
   - uses: script # Set TAB_DOMAIN for local launch
     name: Set TAB_DOMAIN for local launch
     with:
-      run: echo "::set-output TAB_DOMAIN=localhost:53000"
+      run: echo "set-teamsfx-env TAB_DOMAIN=localhost:53000"
   - uses: script # Set TAB_ENDPOINT for local launch
     name: Set TAB_ENDPOINT for local launch
     with:
-      run: echo "::set-output TAB_ENDPOINT=https://localhost:53000"
+      run: echo "set-teamsfx-env TAB_ENDPOINT=https://localhost:53000"
   - uses: script # Set FUNC_NAME for local launch
     name: Set FUNC_NAME for local launch
     with:
-      run: echo "::set-output FUNC_NAME=finishTaskNotification"
+      run: echo "set-teamsfx-env FUNC_NAME=finishTaskNotification"
   - uses: script # Set FUNC_ENDPOINT for local launch
     name: Set FUNC_ENDPOINT for local launch
     with:
-      run: echo "::set-output FUNC_ENDPOINT=http://localhost:7071"
+      run: echo "set-teamsfx-env FUNC_ENDPOINT=http://localhost:7071"
         
   - uses: aadApp/update
     with:
