--- a/team-central-dashboard/package.json
+++ b/team-central-dashboard/package.json
@@ -6,6 +6,7 @@
   },
   "private": true,
   "dependencies": {
+    "@fluentui/react": "^8.107.1",
     "@fluentui/react-charting": "^5.14.10",
     "@fluentui/react-components": "^9.18.0",
     "@fluentui/react-icons": "^2.0.186",
