--- a/stocks-update-notification-bot/teamsapp.yml
+++ b/stocks-update-notification-bot/teamsapp.yml
@@ -12,7 +12,7 @@ provision:
       
   - uses: botAadApp/create # Creates a new or reuses an existing Azure Active Directory application for bot.
     with:
-      name: npm-search-msgext-${{TEAMSFX_ENV}} # The Azure Active Directory application's display name
+      name: stocks-update-notif-bot-${{TEAMSFX_ENV}} # The Azure Active Directory application's display name
     writeToEnvironmentFile:
       botId: BOT_ID # The Azure Active Directory application's client id created for bot.
       botPassword: SECRET_BOT_PASSWORD # The Azure Active Directory application's client secret created for bot. 
