--- a/graph-connector-bot/teamsapp.local.yml
+++ b/graph-connector-bot/teamsapp.local.yml
@@ -21,7 +21,7 @@ provision:
     writeToEnvironmentFile: # Write the information of created resources into environment file for the specified environment variable(s).
       teamsAppId: TEAMS_APP_ID
       
-  - uses: botAadApp/create # Creates a new AAD app for bot if BOT_ID environment variable is empty
+  - uses: botAadApp/create # Creates a new or reuses an existing Azure Active Directory application for bot.
     with:
       name: graph-connector-bot-${{TEAMSFX_ENV}} # The Azure Active Directory application's display name
     writeToEnvironmentFile:
