--- a/developer-assist-dashboard/package.json
+++ b/developer-assist-dashboard/package.json
@@ -13,7 +13,7 @@
     "@microsoft/microsoft-graph-client": "^3.0.5",
     "@microsoft/teams-js": "^2.7.1",
     "@microsoft/teamsfx": "^2.2.0",
-    "@microsoft/teamsfx-react": "^3.0.0-alpha",
+    "@microsoft/teamsfx-react": "^3.0.0-beta",
     "azure-devops-node-api": "^12.0.0",
     "node-fetch": "^2.6.7",
     "octokit": "^2.0.14",
