--- a/graph-toolkit-contact-exporter/appPackage/manifest.json
+++ b/graph-toolkit-contact-exporter/appPackage/manifest.json
@@ -31,7 +31,7 @@
             "canUpdateConfiguration": true,
             "scopes": [
                 "team",
-                "groupChat"
+                "groupchat"
             ]
         }
     ],
