--- a/hello-world-teams-tab-and-outlook-add-in/teamsapp.local.yml
+++ b/hello-world-teams-tab-and-outlook-add-in/teamsapp.local.yml
@@ -14,13 +14,16 @@ provision:
     name: Set TAB_DOMAIN for local launch
     with:
       run: echo "::set-teamsfx-env TAB_DOMAIN=localhost:53000"
+
   - uses: script # Set TAB_ENDPOINT for local launch
     name: Set TAB_ENDPOINT for local launch
     with:
       run: echo "::set-teamsfx-env TAB_ENDPOINT=https://localhost:53000"
-  - uses: teamsApp/validateManifest # Validate using manifest schema
-    with:
-      manifestPath: ./appPackage/manifest.json # Path to manifest template
+
+  # - uses: teamsApp/validateManifest # Validate using manifest schema
+  #   with:
+  #     manifestPath: ./appPackage/manifest.json # Path to manifest template
+
   - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
     with:
       manifestPath: ./appPackage/manifest.json # Path to manifest template
