--- a/hello-world-teams-tab-and-outlook-add-in/teamsapp.yml
+++ b/hello-world-teams-tab-and-outlook-add-in/teamsapp.yml
@@ -10,7 +10,8 @@ provision:
   - uses: teamsApp/create # Creates a Teams app
     with:
       name: Contoso-${{TEAMSFX_ENV}} # Teams app name
-    writeToEnvironmentFile: # Write the information of created resources into environment file for the specified environment variable(s).
+    writeToEnvironmentFile:
+      # Write the information of created resources into environment file for the specified environment variable(s).
       teamsAppId: TEAMS_APP_ID
 
   - uses: arm/deploy # Deploy given ARM templates parallelly.
@@ -29,9 +30,9 @@ provision:
       indexPage: index.html
       errorPage: error.html
 
-  - uses: teamsApp/validateManifest # Validate using manifest schema
-    with:
-      manifestPath: ./appPackage/manifest.json # Path to manifest template
+  # - uses: teamsApp/validateManifest # Validate using manifest schema
+  #   with:
+  #     manifestPath: ./appPackage/manifest.json # Path to manifest template
 
   - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
     with:
@@ -41,7 +42,6 @@ provision:
   - uses: teamsApp/update # Apply the Teams app manifest to an existing Teams app in Teams Developer Portal. Will use the app id in manifest file to determine which Teams app to update.
     with:
       appPackagePath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to this file. This is the path for built zip file.
-
 
 # Triggered when 'teamsfx deploy' is executed
 deploy:
@@ -65,9 +65,9 @@ deploy:
 
 # Triggered when 'teamsfx publish' is executed
 publish:
-  - uses: teamsApp/validateManifest # Validate using manifest schema
-    with:
-      manifestPath: ./appPackage/manifest.json # Path to manifest template
+  # - uses: teamsApp/validateManifest # Validate using manifest schema
+  #   with:
+  #     manifestPath: ./appPackage/manifest.json # Path to manifest template
   - uses: teamsApp/zipAppPackage
     with:
       manifestPath: ./appPackage/manifest.json # Path to manifest template
@@ -79,5 +79,7 @@ publish:
   - uses: teamsApp/publishAppPackage # Publish the app to Teams Admin Center (https://admin.teams.microsoft.com/policies/manage-apps) for review and approval
     with:
       appPackagePath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip
-    writeToEnvironmentFile: # Write the information of created resources into environment file for the specified environment variable(s).
+    writeToEnvironmentFile:
+      # Write the information of created resources into environment file for the specified environment variable(s).
       publishedAppId: TEAMS_APP_PUBLISHED_APP_ID
+projectId: 6fc13035-3328-4616-8001-5dbc1fa420de
