--- a/share-now/bot/package.json
+++ b/share-now/bot/package.json
@@ -9,7 +9,7 @@
         "node": "14 || 16 || 18"
     },
     "scripts": {
-        "dev:teamsfx": "env-cmd --silent -f .localSettings npm run dev",
+        "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run dev",
         "dev": "nodemon --exec node --inspect=9239 --signal SIGINT -r ts-node/register ./index.ts",
         "build": "tsc --build",
         "start": "node ./lib/index.js",
