--- a/team-central-dashboard/api/package.json
+++ b/team-central-dashboard/api/package.json
@@ -2,7 +2,7 @@
   "name": "teamsfx-template-api",
   "version": "1.0.0",
   "scripts": {
-      "dev:teamsfx": "env-cmd --silent -f .localSettings npm run dev",
+      "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run dev",
       "dev": "func start --typescript --language-worker=\"--inspect=9229\" --port \"7071\" --cors \"*\"",
       "build": "tsc",
       "watch": "tsc -w",
