--- a/graph-connector-app/tabs/package.json
+++ b/graph-connector-app/tabs/package.json
@@ -30,7 +30,7 @@
     "typescript": "^4.1.2"
   },
   "scripts": {
-    "dev:teamsfx": "env-cmd --silent -f .localSettings npm run start",
+    "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build:teamsfx": "cross-env-shell \"env-cmd -f .env.teamsfx.${TEAMS_FX_ENV} npm run build\"",
