--- a/hello-world-teams-tab-and-outlook-add-in/package.json
+++ b/hello-world-teams-tab-and-outlook-add-in/package.json
@@ -7,7 +7,7 @@
         "build:add-in": "cd add-in && npm run build",
         "build": "npm run build:tab && npm run build:add-in",
         "postbuild": "ncp tab/build build && ncp add-in/dist build",
-        "dev:teamsfx": "env-cmd --silent -f .localSettings npm run start:tab",
+        "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run start:tab",
         "install": "npm run install:add-in && npm run install:tab",
         "install:add-in": "cd add-in && npm install",
         "install:tab": "cd tab && npm install",
