--- a/share-now/tabs/package.json
+++ b/share-now/tabs/package.json
@@ -27,7 +27,7 @@
     "typescript": "^4.2.4"
   },
   "scripts": {
-    "dev:teamsfx": "env-cmd --silent -f .localSettings npm run start",
+    "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
