--- a/share-now/teamsapp.local.yml
+++ b/share-now/teamsapp.local.yml
@@ -103,7 +103,7 @@ deploy:
 
   - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables for tab
     with:
-      target: ./tabs/.localSettings
+      target: ./tabs/.localConfigs
       envs:
         BROWSER: none
         HTTPS: true
@@ -117,7 +117,7 @@ deploy:
 
   - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables
     with:
-      target: ./bot/.localSettings
+      target: ./bot/.localConfigs
       envs:
         BOT_ID: ${{BOT_ID}}
         BOT_PASSWORD: ${{SECRET_BOT_PASSWORD}}
@@ -128,7 +128,7 @@ deploy:
 
   - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables for backend
     with:
-      target: ./api/.localSettings
+      target: ./api/.localConfigs
       envs:
         FUNCTIONS_WORKER_RUNTIME: node
         M365_CLIENT_ID: ${{AAD_APP_CLIENT_ID}}
