--- a/todo-list-with-Azure-backend/api/package.json
+++ b/todo-list-with-Azure-backend/api/package.json
@@ -6,7 +6,7 @@
     "node": "14 || 16 || 18"
   },
   "scripts": {
-    "dev:teamsfx": "env-cmd --silent -f .localSettings npm run dev",
+    "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run dev",
     "dev": "func start --javascript --language-worker=\"--inspect=9229\" --port \"7071\" --cors \"*\"",
     "start": "npx func start",
     "test": "echo \"Error: no test specified\" && exit 1"
