--- a/live-share-dice-roller/.vscode/tasks.json
+++ b/live-share-dice-roller/.vscode/tasks.json
@@ -39,16 +39,19 @@
             "command": "debug-start-local-tunnel",
             "args": {
                 "type": "dev-tunnel",
-                "port": 3000,
-                "protocol": "http",
-                "access": "public",
+                "ports": [
+                    {
+                        "portNumber": 3000,
+                        "protocol": "http",
+                        "access": "public",
+                        "writeToEnvironmentFile": {
+                            // output to .env.local
+                            "endpoint": "BOT_ENDPOINT", // output tunnel endpoint as BOT_ENDPOINT
+                            "domain": "BOT_DOMAIN", // output tunnel domain as BOT_DOMAIN
+                        }
+                    }
+                ],
                 "env": "local",
-                "output": {
-                    // output to .env.local
-                    "endpoint": "BOT_ENDPOINT", // output tunnel endpoint as BOT_ENDPOINT
-                    "domain": "BOT_DOMAIN", // output tunnel domain as BOT_DOMAIN
-                    "id": "DEV_TUNNEL_ID" // output dev tunnel id as DEV_TUNNEL_ID
-                }
             },
             "isBackground": true,
             "problemMatcher": "$teamsfx-local-tunnel-watch"
