--- a/live-share-dice-roller/manifest/manifest.json
+++ b/live-share-dice-roller/manifest/manifest.json
@@ -2,7 +2,7 @@
     "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.12/MicrosoftTeams.schema.json",
     "version": "1.0.1",
     "manifestVersion": "1.12",
-    "id": "<<YOUR-MICROSOFT-APP-ID>>",
+    "id": "${{TEAMS_APP_ID}}",
     "packageName": "com.microsoft.teams.livesharediceroller",
     "name": {
         "short": "DiceRollerLiveShare",
@@ -43,7 +43,6 @@
     ],
     "authorization": {
         "permissions": {
-            "orgWide": [],
             "resourceSpecific": [
                 {
                     "name": "MeetingStage.Write.Chat",
