--- a/live-share-dice-roller/env/.env.dev
+++ b/live-share-dice-roller/env/.env.dev
@@ -13,3 +13,7 @@ TAB_ENDPOINT=
 TEAMS_APP_TENANT_ID=
 TAB_DOMAIN=
 TEAMS_APP_UPDATE_TIME=
+TEAMS_APP_PUBLISHED_APP_ID=
+BOT_DOMAIN=
+BOT_ENDPOINT=
+BOT_AZURE_APP_SERVICE_RESOURCE_ID=
