--- a/live-share-dice-roller/teamsapp.local.yml
+++ b/live-share-dice-roller/teamsapp.local.yml
@@ -22,15 +22,15 @@ provision:
       run: echo "::set-teamsfx-env TAB_ENDPOINT=https://localhost:3000"
   - uses: teamsApp/validateManifest
     with:
-      manifestPath: ./manifest/manifest.json # Path to manifest template
+      manifestPath: ./appPackage/manifest.json # Path to manifest template
   - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
     with:
-      manifestPath: ./manifest/manifest.json # Path to manifest template
-      outputZipPath: ./build/manifest/appPackage.${{TEAMSFX_ENV}}.zip
-      outputJsonPath: ./build/manifest/manifest.${{TEAMSFX_ENV}}.json
+      manifestPath: ./appPackage/manifest.json # Path to manifest template
+      outputZipPath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip
+      outputJsonPath: ./appPackage/build/manifest.${{TEAMSFX_ENV}}.json
   - uses: teamsApp/update # Apply the Teams app manifest to an existing Teams app in Teams Developer Portal. Will use the app id in manifest file to determine which Teams app to update.
     with:
-      appPackagePath: ./build/manifest/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to this file. This is the path for built zip file.
+      appPackagePath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to this file. This is the path for built zip file.
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
