--- a/adaptive-card-notification/teamsapp.local.yml
+++ b/adaptive-card-notification/teamsapp.local.yml
@@ -13,13 +13,17 @@ provision:
     # the specified environment variable(s).
     writeToEnvironmentFile:
       teamsAppId: TEAMS_APP_ID
-      
-  - uses: botAadApp/create # Creates a new or reuses an existing Azure Active Directory application for bot.
+
+  # Create or reuse an existing Azure Active Directory application for bot.
+  - uses: botAadApp/create
     with:
-      name: adaptive-card-notifi-${{TEAMSFX_ENV}} # The Azure Active Directory application's display name
+      # The Azure Active Directory application's display name
+      name: adaptive-card-notifi-${{TEAMSFX_ENV}}
     writeToEnvironmentFile:
-      botId: BOT_ID # The Azure Active Directory application's client id created for bot.
-      botPassword: SECRET_BOT_PASSWORD # The Azure Active Directory application's client secret created for bot. 
+      # The Azure Active Directory application's client id created for bot.
+      botId: BOT_ID
+      # The Azure Active Directory application's client secret created for bot.
+      botPassword: SECRET_BOT_PASSWORD
 
   - uses: botFramework/create # Create or update the bot registration on dev.botframework.com
     with:
