--- a/hello-world-bot-with-tab/teamsapp.local.yml
+++ b/hello-world-bot-with-tab/teamsapp.local.yml
@@ -14,12 +14,16 @@ provision:
     writeToEnvironmentFile:
       teamsAppId: TEAMS_APP_ID
 
-  - uses: botAadApp/create # Creates a new or reuses an existing Azure Active Directory application for bot.
+  # Create or reuse an existing Azure Active Directory application for bot.
+  - uses: botAadApp/create
     with:
-      name: bot-${{TEAMSFX_ENV}} # The Azure Active Directory application's display name
+      # The Azure Active Directory application's display name
+      name: bot-${{TEAMSFX_ENV}}
     writeToEnvironmentFile:
-      botId: BOT_ID # The Azure Active Directory application's client id created for bot.
-      botPassword: SECRET_BOT_PASSWORD # The Azure Active Directory application's client secret created for bot.
+      # The Azure Active Directory application's client id created for bot.
+      botId: BOT_ID
+      # The Azure Active Directory application's client secret created for bot.
+      botPassword: SECRET_BOT_PASSWORD
 
   - uses: botFramework/create # Create or update the bot registration on dev.botframework.com
     with:
@@ -32,8 +36,7 @@ provision:
 
   - uses: script # Set TAB_DOMAIN and TAB_ENDPOINT for local launch
     with:
-      run:
-        echo "::set-teamsfx-env TAB_DOMAIN=localhost:53000";
+      run: echo "::set-teamsfx-env TAB_DOMAIN=localhost:53000";
         echo "::set-teamsfx-env TAB_ENDPOINT=https://localhost:53000";
   # Validate using manifest schema
   - uses: teamsApp/validateManifest
