--- a/team-central-dashboard/teamsapp.local.yml
+++ b/team-central-dashboard/teamsapp.local.yml
@@ -31,7 +31,7 @@ provision:
   - uses: script # Set FUNC_NAME for local launch
     name: Set FUNC_NAME for local launch
     with:
-      run: echo "::set-teamsfx-env FUNC_NAME=finishTaskNotification"
+      run: echo "::set-teamsfx-env FUNC_NAME=callGraph"
   - uses: script # Set FUNC_ENDPOINT for local launch
     name: Set FUNC_ENDPOINT for local launch
     with:
