perf: loading indicator

--- a/team-central-dashboard/appPackage/manifest.json
+++ b/team-central-dashboard/appPackage/manifest.json
@@ -65,5 +65,6 @@
                 "templateText": "{actor} created task"
             }
         ]
-    }
+    },
+    "showLoadingIndicator": true
 }
