--- a/team-central-dashboard/teamsapp.local.yml
+++ b/team-central-dashboard/teamsapp.local.yml
@@ -62,12 +62,15 @@ provision:
       appPackagePath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip
 
 deploy:
-  - uses: devTool/install # Install development tool(s)
+  # Install development tool(s)
+  - uses: devTool/install
     with:
       devCert:
         trust: true
       dotnet: true
-    writeToEnvironmentFile: # Write the information of installed development tool(s) into environment file for the specified environment variable(s).
+    # Write the information of installed development tool(s) into environment
+    # file for the specified environment variable(s).
+    writeToEnvironmentFile:
       sslCertFile: SSL_CRT_FILE
       sslKeyFile: SSL_KEY_FILE
       dotnetPath: DOTNET_PATH
@@ -87,7 +90,8 @@ deploy:
       workingDirectory: api
       execPath: ${{DOTNET_PATH}}
 
-  - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables for tab
+  # Generate runtime environment variables for tab
+  - uses: file/createOrUpdateEnvironmentFile
     with:
       target: ./.localConfigs
       envs:
@@ -102,7 +106,8 @@ deploy:
         REACT_APP_FUNC_NAME: ${{FUNC_NAME}}
         REACT_APP_FUNC_ENDPOINT: ${{FUNC_ENDPOINT}}
 
-  - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables for backend
+  # Generate runtime environment variables for backend
+  - uses: file/createOrUpdateEnvironmentFile
     with:
       target: ./api/.localConfigs
       envs:
