--- a/graph-connector-app/teamsapp.yml
+++ b/graph-connector-app/teamsapp.yml
@@ -68,10 +68,13 @@ provision:
       appPackagePath: build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to teamsfx folder. This is the path for built zip file.
 
 deploy:
-  - uses: devTool/install # Install development tool(s)
+  # Install development tool(s)
+  - uses: devTool/install
     with:
       dotnet: true
-    writeToEnvironmentFile: # Write the information of installed development tool(s) into environment file for the specified environment variable(s).
+    # Write the information of installed development tool(s) into environment
+    # file for the specified environment variable(s).
+    writeToEnvironmentFile:
       dotnetPath: DOTNET_PATH
   - uses: cli/runNpmCommand # Run npm command
     with:
