--- a/hello-world-tab-with-backend/teamsapp.yml
+++ b/hello-world-tab-with-backend/teamsapp.yml
@@ -94,10 +94,13 @@ deploy:
     with:
       workingDirectory: api
       args: run build --if-present
-  - uses: devTool/install # Install development tool(s)
+  # Install development tool(s)
+  - uses: devTool/install
     with:
       dotnet: true
-    writeToEnvironmentFile: # Write the information of installed development tool(s) into environment file for the specified environment variable(s).
+    # Write the information of installed development tool(s) into environment
+    # file for the specified environment variable(s).
+    writeToEnvironmentFile:
       dotnetPath: DOTNET_PATH
   - uses: cli/runDotnetCommand
     with:
