--- a/share-now/teamsapp.yml
+++ b/share-now/teamsapp.yml
@@ -129,10 +129,13 @@ deploy:
     with:
       workingDirectory: api
       args: install
-  - uses: devTool/install # Install development tool(s)
+  # Install development tool(s)
+  - uses: devTool/install
     with:
       dotnet: true
-    writeToEnvironmentFile: # Write the information of installed development tool(s) into environment file for the specified environment variable(s).
+    # Write the information of installed development tool(s) into environment
+    # file for the specified environment variable(s).
+    writeToEnvironmentFile:
       dotnetPath: DOTNET_PATH
   - uses: cli/runDotnetCommand
     with:
