docs: change yaml comment to fit the lint

--- a/graph-connector-app/teamsapp.yml
+++ b/graph-connector-app/teamsapp.yml
@@ -76,11 +76,13 @@ deploy:
     # file for the specified environment variable(s).
     writeToEnvironmentFile:
       dotnetPath: DOTNET_PATH
-  - uses: cli/runNpmCommand # Run npm command
+  # Run npm command
+  - uses: cli/runNpmCommand
     with:
       workingDirectory: tabs
       args: install
-  - uses: cli/runNpmCommand # Run npm command
+  # Run npm command
+  - uses: cli/runNpmCommand
     env:
       REACT_APP_CLIENT_ID: ${{AAD_APP_CLIENT_ID}}
       REACT_APP_START_LOGIN_PAGE_URL: ${{TAB_ENDPOINT}}/auth-start.html
@@ -97,11 +99,13 @@ deploy:
       artifactFolder: build
       # The resource id of the cloud resource to be deployed to
       resourceId: ${{TAB_AZURE_STORAGE_RESOURCE_ID}}
-  - uses: cli/runNpmCommand # Run npm command
+  # Run npm command
+  - uses: cli/runNpmCommand
     with:
       workingDirectory: api
       args: install
-  - uses: cli/runNpmCommand # Run npm command
+  # Run npm command
+  - uses: cli/runNpmCommand
     with:
       workingDirectory: api
       args: run build --if-present
@@ -111,7 +115,7 @@ deploy:
       args: build extensions.csproj -o bin --ignore-failed-sources
       execPath: ${{DOTNET_PATH}}
   # Deploy your application to Azure Functions using the zip deploy feature.
-  # For additional details, please refer to https://aka.ms/zip-deploy-to-azure-functions
+  # For additional details, see at https://aka.ms/zip-deploy-to-azure-functions
   - uses: azureFunctions/zipDeploy
     with:
       workingDirectory: api
