--- a/todo-list-with-Azure-backend-M365/teamsapp.local.yml
+++ b/todo-list-with-Azure-backend-M365/teamsapp.local.yml
@@ -92,7 +92,8 @@ deploy:
       funcPath: FUNC_PATH
       dotnetPath: DOTNET_PATH
 
-  - uses: cli/runNpmCommand # Run npm command
+  # Run npm command
+  - uses: cli/runNpmCommand
     with:
       workingDirectory: .
       args: install --no-audit
