--- a/adaptive-card-notification/teamsapp.local.yml
+++ b/adaptive-card-notification/teamsapp.local.yml
@@ -72,7 +72,8 @@ deploy:
     # file for the specified environment variable(s).
     writeToEnvironmentFile:
       funcPath: FUNC_PATH
-  - uses: cli/runNpmCommand # Run npm command
+  # Run npm command
+  - uses: cli/runNpmCommand
     with:
       args: install --no-audit
   # Generate runtime environment variables
