--- a/command-bot-with-sso/teamsapp.local.yml
+++ b/command-bot-with-sso/teamsapp.local.yml
@@ -77,7 +77,8 @@ provision:
       appPackagePath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to teamsfx folder. This is the path for building zip file.
 
 deploy:
-  - uses: cli/runNpmCommand # Run npm command
+  # Run npm command
+  - uses: cli/runNpmCommand
     with:
       args: install --no-audit
   # Generate runtime environment variables
