--- a/command-bot-with-sso/teamsapp.yml
+++ b/command-bot-with-sso/teamsapp.yml
@@ -76,14 +76,15 @@ provision:
       appPackagePath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to teamsfx folder. This is the path for building zip file.
 
 deploy:
-  - uses: cli/runNpmCommand # Run npm command
+  # Run npm command
+  - uses: cli/runNpmCommand
     with:
       args: install
   - uses: cli/runNpmCommand
     with:
       args: run build --if-present
   # Deploy your application to Azure App Service using the zip deploy feature.
-  # For additional details, please refer to https://aka.ms/zip-deploy-to-app-services.
+  # For additional details, refer to https://aka.ms/zip-deploy-to-app-services.
   - uses: azureAppService/zipDeploy
     with:
       # Deploy base folder
