--- a/query-org-user-with-message-extension-sso/teamsapp.yml
+++ b/query-org-user-with-message-extension-sso/teamsapp.yml
@@ -79,14 +79,15 @@ provision:
       appPackagePath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip
 
 deploy:
-  - uses: cli/runNpmCommand # Run npm command
+  # Run npm command
+  - uses: cli/runNpmCommand
     with:
       args: install
   - uses: cli/runNpmCommand
     with:
       args: run build --if-present
   # Deploy your application to Azure App Service using the zip deploy feature.
-  # For additional details, please refer to https://aka.ms/zip-deploy-to-app-services.
+  # For additional details, refer to https://aka.ms/zip-deploy-to-app-services.
   - uses: azureAppService/zipDeploy
     env:
       REACT_APP_CLIENT_ID: ${{AAD_APP_CLIENT_ID}}
