--- a/stocks-update-notification-bot/teamsapp.local.yml
+++ b/stocks-update-notification-bot/teamsapp.local.yml
@@ -71,7 +71,8 @@ deploy:
     # file for the specified environment variable(s).
     writeToEnvironmentFile:
       funcPath: FUNC_PATH
-  - uses: cli/runNpmCommand # Run npm command
+  # Run npm command
+  - uses: cli/runNpmCommand
     with:
       args: install --no-audit
   # Generate runtime environment variables
