--- a/adaptive-card-notification/teamsapp.yml
+++ b/adaptive-card-notification/teamsapp.yml
@@ -72,7 +72,7 @@ deploy:
   - uses: azureFunctions/zipDeploy
     with:
       artifactFolder: .
-      # can be changed to any ignore file location, leave blank will ignore nothing
+      # Ignore file location, leave blank will ignore nothing
       ignoreFile: .funcignore
       # the resource id of the cloud resource to be deployed to
       resourceId: ${{BOT_AZURE_FUNCTION_APP_RESOURCE_ID}}
