--- a/hello-world-tab-with-backend/teamsapp.yml
+++ b/hello-world-tab-with-backend/teamsapp.yml
@@ -118,7 +118,7 @@ deploy:
       workingDirectory: api
       # deploy base folder
       artifactFolder: .
-      # can be changed to any ignore file location, leave blank will ignore nothing
+      # Ignore file location, leave blank will ignore nothing
       ignoreFile: .funcignore
       # the resource id of the cloud resource to be deployed to
       resourceId: ${{API_FUNCTION_RESOURCE_ID}}
