--- a/command-bot-with-sso/.vscode/tasks.json
+++ b/command-bot-with-sso/.vscode/tasks.json
@@ -7,7 +7,7 @@
         {
             "label": "Start Teams App Locally",
             "dependsOn": [
-                "Validate & install prerequisites",
+                "Validate prerequisites",
                 "Start local tunnel",
                 "Provision",
                 "Deploy",
@@ -16,9 +16,9 @@
             "dependsOrder": "sequence"
         },
         {
-            // Check if all required prerequisites are installed and will install them if not.
+            // Check all required prerequisites.
             // See https://aka.ms/teamsfx-tasks/check-prerequisites to know the details and how to customize the args.
-            "label": "Validate & install prerequisites",
+            "label": "Validate prerequisites",
             "type": "teamsfx",
             "command": "debug-check-prerequisites",
             "args": {
