--- a/graph-connector-app/.vscode/tasks.json
+++ b/graph-connector-app/.vscode/tasks.json
@@ -7,7 +7,7 @@
         {
             "label": "Start Teams App Locally",
             "dependsOn": [
-                "Validate & install prerequisites",
+                "Validate prerequisites",
                 "Provision",
                 "Install tools and Build project",
                 "Start services"
@@ -15,9 +15,9 @@
             "dependsOrder": "sequence"
         },
         {
-            // Check if all required prerequisites are installed and will install them if not.
+            // Check all required prerequisites.
             // See https://aka.ms/teamsfx-tasks/check-prerequisites to know the details and how to customize the args.
-            "label": "Validate & install prerequisites",
+            "label": "Validate prerequisites",
             "type": "teamsfx",
             "command": "debug-check-prerequisites",
             "args": {
@@ -90,7 +90,14 @@
             "options": {
                 "cwd": "${workspaceFolder}/api",
                 "env": {
-                    "PATH": "${command:fx-extension.get-func-path}${env:PATH}"
+                    "PATH": "${workspaceFolder}/devTools/func:${env:PATH}"
+                }
+            },
+            "windows": {
+                "options": {
+                    "env": {
+                        "PATH": "${workspaceFolder}/devTools/func;${env:PATH}"
+                    }
                 }
             },
             "problemMatcher": {
