--- a/team-central-dashboard/.vscode/tasks.json
+++ b/team-central-dashboard/.vscode/tasks.json
@@ -7,7 +7,7 @@
         {
             "label": "Start Teams App Locally",
             "dependsOn": [
-                "Validate & install prerequisites",
+                "Validate prerequisites",
                 "Create resources",
                 "Build project",
                 "Start application"
@@ -17,7 +17,7 @@
         {
             // Check all required prerequisites.
             // See https://aka.ms/teamsfx-tasks/check-prerequisites to know the details and how to customize the args.
-            "label": "Validate & install prerequisites",
+            "label": "Validate prerequisites",
             "type": "teamsfx",
             "command": "debug-check-prerequisites",
             "args": {
@@ -40,7 +40,6 @@
             "type": "teamsfx",
             "command": "provision",
             "args": {
-                "template": "${workspaceFolder}/teamsapp.local.yml",
                 "env": "local"
             }
         },
@@ -51,7 +50,6 @@
             "type": "teamsfx",
             "command": "deploy",
             "args": {
-                "template": "${workspaceFolder}/teamsapp.local.yml",
                 "env": "local"
             }
         },
@@ -92,9 +90,16 @@
             "options": {
               "cwd": "${workspaceFolder}/api",
               "env": {
-                "PATH": "${command:fx-extension.get-func-path}${env:PATH}"
+                  "PATH": "${workspaceFolder}/devTools/func:${env:PATH}"
               }
-            },
+          },
+          "windows": {
+              "options": {
+                  "env": {
+                      "PATH": "${workspaceFolder}/devTools/func;${env:PATH}"
+                  }
+              }
+          },
             "problemMatcher": {
               "pattern": {
                 "regexp": "^.*$",
