--- a/developer-assist-dashboard/package.json
+++ b/developer-assist-dashboard/package.json
@@ -12,8 +12,7 @@
     "@microsoft/teams-js": "^2.7.1",
     "@microsoft/teamsfx": "^2.2.0",
     "@microsoft/teamsfx-react": "^3.0.0-beta",
-    "azure-devops-node-api": "^12.0.0",
-    "octokit": "^2.0.14",
+    "axios": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
